[package]
name = "gorilla"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
colored = "2.0.0"
regex = "1.6.0"
reqwest = "0.11.11"
tokio = { version = "1.20.1", features = ["full"] }
yaml-rust = "0.4.5"
