[package]
name = "gorilla"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.8", features = ["derive"] }
colored = "2.0.0"
csv = "1.2.0"
regex = "1.6.0"
ureq = "2.5.0"
# reqwest = "0.11.11"
# tokio = { version = "1.20.1", features = ["full"] }
yaml-rust = "0.4.5"

[profile.release]
# opt-level = 'z'     # Optimize for size.
# lto = true          # Enable Link Time Optimization
# codegen-units = 1   # Reduce number of codegen units to increase optimizations.
# panic = 'abort'     # Abort on panic
strip = "symbols"   # Strip symbols from binary
